--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,16 @@
         <link rel="stylesheet" href="/styles.css">
     </head>
     <body>
-lalalla
+            <div id="mario-chat">
+                    <div id="chat-window">
+                        <div id="output"></div>
+                        <div id="feedback"></div>
+                    </div>
+                    <input id="handle" type="text" placeholder="handle">
+                    <input id="message" type="text" placeholder="Message">
+                    <button id="send">Send</button>
+                </div>
 <script src="/chat.js"></script>
     </body>
+    
 </html>
